# torchrec

./: .buildinfo  .gitignore  .gitmodules  .lintrunner.toml  .pre-commit-config.yaml  .pyre_configuration  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.MD  README.md  TorchRec_Interactive_Tutorial_Notebook_OSS_version.ipynb  Torchrec_Introduction.ipynb  __init__.py  concepts.html  datatypes-api-reference.html  genindex.html  high-level-arch.html  index.html  inference-api-reference.html  install-requirements.txt  model-parallel-api-reference.html  modules-api-reference.html  objects.inv  overview.html  pipeline_sample.py  planner-api-reference.html  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js  setup-torchrec.html  setup.py  test_ci_pr  test_installation.py  test_installation_main.py  torchrec.datasets.html  torchrec.datasets.scripts.html  torchrec.distributed.html  (+16 more)
benchmarks/cpp/dynamic_embedding/: CMakeLists.txt  mixed_lfu_lru_strategy_benchmark.cpp  mixed_lfu_lru_strategy_evict_benchmark.cpp  naive_id_transformer_benchmark.cpp  random_bits_generator_benchmark.cpp
contrib/dynamic_embedding/: .gitignore  CMakeLists.txt  README.md  setup.py
contrib/dynamic_embedding/src/: CMakeLists.txt
contrib/dynamic_embedding/src/3rd/: CMakeLists.txt
contrib/dynamic_embedding/src/tde/: CMakeLists.txt  bind.cpp  id_transformer.cpp  id_transformer.h  notification.h  ps.cpp  ps.h  tensor_list.h
contrib/dynamic_embedding/src/tde/details/: bits_op.h  bits_op_test.cpp  cacheline_id_transformer.cpp  cacheline_id_transformer.h  cacheline_id_transformer_benchmark.cpp  cacheline_id_transformer_impl.h  cacheline_id_transformer_test.cpp  clz_impl.cpp  ctz_impl.cpp  debug.h  fetcher.cpp  fetcher.h  id_transformer_registry.cpp  id_transformer_registry.h  id_transformer_registry_test.cpp  id_transformer_variant.cpp  id_transformer_variant.h  id_transformer_variant_impl.h  id_transformer_variant_test.cpp  io.cpp  io.h  io_redis_test.cpp  io_registry.cpp  io_registry.h  mixed_lfu_lru_strategy.cpp  mixed_lfu_lru_strategy.h  mixed_lfu_lru_strategy_benchmark.cpp  mixed_lfu_lru_strategy_evict_benchmark.cpp  mixed_lfu_lru_strategy_test.cpp  move_only_function.cpp  move_only_function.h  move_only_function_test.cpp  multithreaded_id_transformer.cpp  multithreaded_id_transformer.h  multithreaded_id_transformer_benchmark.cpp  multithreaded_id_transformer_impl.h  multithreaded_id_transformer_test.cpp  naive_id_transformer.cpp  naive_id_transformer.h  naive_id_transformer_benchmark.cpp  (+21 more)
contrib/dynamic_embedding/src/torchrec_dynamic_embedding/: __init__.py  dataloader.py  id_transformer.py  id_transformer_collection.py  id_transformer_group.py  ps.py  tensor_list.py  utils.py
contrib/dynamic_embedding/src/torchrec_dynamic_embedding/distributed/: __init__.py  comm.py
contrib/dynamic_embedding/tests/: test_id_transformer.py  test_id_transformer_collection.py  test_integral_precision.py  test_ps.py  test_ps_collection.py  test_ps_precision.py  test_skeleton.py  utils.py
contrib/dynamic_embedding/tests/memory_io/: CMakeLists.txt  Makefile  memory_io.cpp
contrib/dynamic_embedding/tools/: before_linux_build.sh  build_wheels.sh  repair_wheel.sh
test/cpp/dynamic_embedding/: CMakeLists.txt  bits_op_test.cpp  id_transformer_variant_test.cpp  mixed_lfu_lru_strategy_test.cpp  move_only_function_test.cpp  naive_id_transformer_test.cpp  notification_test.cpp  random_bits_generator_test.cpp
test/cpp/dynamic_embedding/redis/: CMakeLists.txt  redis_io_test.cpp  url_test.cpp
torchrec/csrc/dynamic_embedding/: CMakeLists.txt  bind.cpp  id_transformer.cpp  id_transformer.h  id_transformer_wrapper.cpp  id_transformer_wrapper.h  ps.cpp  ps.h  tensor_list.h
torchrec/csrc/dynamic_embedding/details/: bitmap.h  bitmap_impl.h  bits_op.h  clz_impl.cpp  ctz_impl.cpp  id_transformer.h  id_transformer_variant.cpp  id_transformer_variant.h  id_transformer_variant_impl.h  io.cpp  io.h  io_parameter.h  io_registry.cpp  io_registry.h  lxu_strategy.h  mixed_lfu_lru_strategy.cpp  mixed_lfu_lru_strategy.h  move_only_function.h  naive_id_transformer.h  naive_id_transformer_impl.h  notification.cpp  notification.h  random_bits_generator.cpp  random_bits_generator.h  types.h
torchrec/csrc/dynamic_embedding/details/redis/: CMakeLists.txt  redis_io.cpp  redis_io.h  url.h
torchrec/inference/: Batching.cpp  Batching.h  BatchingQueue.cpp  BatchingQueue.h  CMakeLists.txt  GPUExecutor.cpp  GPUExecutor.h  JaggedTensor.h  README.md  Types.h  __init__.py  client.py  dlrm_packager.py  dlrm_predict.py  example.cpp  model_packager.py  modules.py  server.cpp  state_dict_transform.py
torchrec/inference/benchmark/: BatchingBenchmark.cpp
torchrec/inference/docs/: inference.rst
torchrec/inference/include/torchrec/inference/: Assert.h  Batching.h  BatchingQueue.h  Exception.h  ExceptionHandler.h  GPUExecutor.h  Observer.h  ResourceManager.h  ResultSplit.h  SingleGPUExecutor.h  TestUtils.h  (+3 more)
torchrec/inference/inference_legacy/: CMakeLists.txt  README.md  __init__.py  client.py
torchrec/inference/inference_legacy/docker/: Dockerfile
torchrec/inference/inference_legacy/protos/: predictor.proto
torchrec/inference/inference_legacy/src/: Batching.cpp  BatchingQueue.cpp  GPUExecutor.cpp  ResourceManager.cpp  ResultSplit.cpp  SingleGPUExecutor.cpp  TestUtils.cpp  Validation.cpp
torchrec/inference/inference_legacy/tests/: BatchingQueueTest.cpp  BatchingTest.cpp  ResultSplitTest.cpp  SingleGPUExecutorTest.cpp  ValidationTest.cpp  generate_test_packages.py  model_packager_tests.py  test_modules.py
torchrec/inference/protos/: predictor.proto
torchrec/inference/src/: Batching.cpp  BatchingQueue.cpp  Exception.cpp  GPUExecutor.cpp  ResourceManager.cpp  ResultSplit.cpp  SingleGPUExecutor.cpp  TestUtils.cpp  Utils.cpp  Validation.cpp
torchrec/inference/tests/: BatchingQueueTest.cpp  BatchingTest.cpp  ResultSplitTest.cpp  SingleGPUExecutorMultiGPUTest.cpp  SingleGPUExecutorTest.cpp  ValidationTest.cpp  generate_test_packages.py  model_packager_tests.py  predict_module_tests.py  test_inference.py  test_modules.py
(+935 files in other folders)
